name:                llvmtest
version:             0.1.0.0
synopsis:            Use llvm from haskell with as few lines as possible
description:         Not a real compiler front end, just a way to get started
homepage:            https://www.hcesperer.org/posts/2017-07-28-writing-a-small-llvm-compiler-frontend-in-haskell.html
license:             MIT
license-file:        LICENSE
author:              Hans-Christian Esperer
maintainer:          hc@hcesperer.org
copyright:           2017 Hans-Christian Esperer
category:            Examples
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable llvmtest
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , llvm-hs
                     , llvm-hs-pure
                     , parsec
                     , text
  default-language:    Haskell2010

test-suite llvmtest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , llvmtest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/llvmtest
